# AloPin

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/crypto/: hmac_sha256.h  pbkdf2.h  scrypt.h  sha256.h
include/proto/: proto.h
src/: alopin.cpp
src/crypto/: hmac_sha256.c  pbkdf2.c  scrypt.c  sha256.c
src/proto/: proto.c
tests/: CMakeLists.txt  test_hmac_sha256.c  test_pbkdf2.c  test_scrypt.c  test_sha256.c
